crud DB and Swagger docs
